finished level 1 and tip section

--- a/app/assets/javascripts/templates/activities/questions_values.hbs
+++ b/app/assets/javascripts/templates/activities/questions_values.hbs
@@ -1,4 +1,4 @@
-{{#view Oli.QuestionAnswerView}}
+{{#view Oli.AnswerValuesView}}
   <div class="description-box oli-text">
     {{controller.comp.content.content}}
   </div>
