--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -1,6 +1,9 @@
 {{outlet nav}}
-<div class="course-wrapper">
-{{outlet levels}}
-{{outlet bar}}
-{{outlet activity}}
+<div class="outer-wrapper">
+  {{outlet tip}}
+  <div class="course-wrapper">
+    {{outlet levels}}
+    {{outlet bar}}
+    {{outlet activity}}
+  </div>
 </div>
