added first part of level 2

--- a/app/assets/javascripts/templates/activities/questions_answers.hbs
+++ b/app/assets/javascripts/templates/activities/questions_answers.hbs
@@ -1,6 +1,6 @@
 {{#view Oli.QuestionAnswerView}}
   <div class="description-box oli-text">
-    {{controller.comp.content.content}}
+      {{controller.controllers.activities.description}}
   </div>
   <div class="component-title qa-title">
     {{controller.comp.content.title}}
