major rendering but when transitions to level 2 discovered and not fixed

--- a/app/assets/javascripts/templates/activities/describe_a_10.hbs
+++ b/app/assets/javascripts/templates/activities/describe_a_10.hbs
@@ -1,1 +1,16 @@
-DESCRIBE A 10
+  <div class="description-box oli-text">
+    {{controller.controllers.activities.description}}
+  </div>
+
+  <div class="word-thread">
+    {{controller.joinedThread.content}}
+  </div>
+  <div class="oli-text rating-section-container">
+
+      {{controller.component1.content.content}}
+    {{input class="oli-box"
+    value=controller.threadEntry}}
+
+      {{controller.component2.content.content}}
+    {{textarea class="oli-box"
+    value=controller.threadEntry}}
