fixed saving in describe a 10 activity

--- a/app/assets/javascripts/templates/activities/describe_a_10.hbs
+++ b/app/assets/javascripts/templates/activities/describe_a_10.hbs
@@ -9,8 +9,12 @@
 
       {{controller.component1.content.content}}
     {{input class="oli-box"
-    value=controller.threadEntry}}
+    value=controller.input1}}
+  </div>
+
+  <div class="oli-text rating-section-container">
 
       {{controller.component2.content.content}}
     {{textarea class="oli-box"
-    value=controller.threadEntry}}
+    value=controller.input2}}
+  </div>
