rendering but fixed, added controllers subfolder

--- a/app/assets/javascripts/templates/activities/describe_a_10.hbs
+++ b/app/assets/javascripts/templates/activities/describe_a_10.hbs
@@ -1,3 +1,5 @@
+{{#view Oli.QuestionAnswerView}}
+
   <div class="description-box oli-text">
     {{controller.controllers.activities.description}}
   </div>
@@ -18,3 +20,4 @@
     {{textarea class="oli-box"
     value=controller.input2}}
   </div>
+{{/view}}
