fixed bugs with level 2

--- a/app/assets/javascripts/templates/activities/describe_a_10.hbs
+++ b/app/assets/javascripts/templates/activities/describe_a_10.hbs
@@ -10,14 +10,14 @@
   <div class="oli-text rating-section-container">
 
       {{controller.component1.content.content}}
-    {{input class="oli-box"
+    {{input class="oli-form-field"
     value=controller.input1}}
   </div>
 
   <div class="oli-text rating-section-container">
 
       {{controller.component2.content.content}}
-    {{textarea class="oli-box"
+    {{textarea class="oli-box-large"
     value=controller.input2}}
   </div>
 {{/view}}
