--- a/app/assets/javascripts/templates/activities/thread_rating.hbs
+++ b/app/assets/javascripts/templates/activities/thread_rating.hbs
@@ -13,10 +13,10 @@
     <div class="radio-button-container">
       {{#each index in controller.buttons}}
         <div class="radio-rating">
-          {{view Ember.RadioButton name="rating_1" selectionBinding="isSelected.content" value=index}}
+          {{view Oli.RatingButton name="thread_rating_1" selectionBinding="isSelected.content" value=index}}
 
           <div class="rating-label">
-            <label for="rating_1">{{index}}</label>
+            <label for="thread_rating_1">{{index}}</label>
           </div>
         </div>
       {{/each}}
@@ -28,10 +28,10 @@
     <div class="radio-button-container">
       {{#each index in controller.buttons}}
         <div class="radio-rating">
-          {{view Ember.RadioButton name="selectionTest2" selectionBinding="isSelected2.content" value=index}}
+          {{view Oli.RatingButton name="thread_rating_2" selectionBinding="isSelected2.content" value=index}}
 
           <div class="rating-label">
-            <label for="rating_2">{{index}}</label>
+            <label for="thread_rating_2">{{index}}</label>
           </div>
         </div>
       {{/each}}
