made thread a partial

--- a/app/assets/javascripts/templates/activities/thread_rating.hbs
+++ b/app/assets/javascripts/templates/activities/thread_rating.hbs
@@ -3,9 +3,7 @@
     {{controller.controllers.activities.description}}
   </div>
 
-  <div class="word-thread">
-    {{controller.joinedThread.content}}
-  </div>
+ {{partial "activities/partials/thread"}}
 
   <div class="oli-text rating-section-container">
     {{controller.component1.content.content}}
