--- a/app/assets/javascripts/templates/activities/describe_a_10.hbs
+++ b/app/assets/javascripts/templates/activities/describe_a_10.hbs
@@ -4,9 +4,8 @@
     {{controller.controllers.activities.description}}
   </div>
 
-  <div class="word-thread">
-    {{controller.joinedThread.content}}
-  </div>
+  {{partial "activities/partials/thread"}}
+
   <div class="oli-text rating-section-container">
 
       {{controller.component1.content.content}}
