fixed pg bug with boxable user_id

--- a/app/assets/javascripts/templates/activities/thread_rating.hbs
+++ b/app/assets/javascripts/templates/activities/thread_rating.hbs
@@ -1,8 +1,5 @@
 
-  <div class="description-box oli-text">
-    {{controller.controllers.activities.description}}
-  </div>
-
+ {{partial "activities/partials/description"}}
  {{partial "activities/partials/thread"}}
 
   <div class="oli-text rating-section-container">
