--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,10 @@
   ga('create', 'UA-39809535-2', 'http://getoli.com');
   ga('require', 'displayfeatures');
   ga('send', 'pageview');
+
 </script>
+<script type="text/javascript" src="http://js.addthisevent.com/atemay.js"></script>
+
 <meta property="fb:app_id"          content="1452435865004111
 " /> 
 <meta property="og:type"            content="fitness.course" /> 
