--- a/app/assets/javascripts/templates/activities/calendar.hbs
+++ b/app/assets/javascripts/templates/activities/calendar.hbs
@@ -23,11 +23,31 @@
     {{!-- {{controller.buttonText}} --}}
     </button>
   </div>
+  
+<a href="http://example.com/link-to-your-event" title="Add to Calendar" class="addthisevent">
+  Add to Calendar
+  <span class="_start">10-05-2012 11:38:46</span>
+  <span class="_end">11-05-2012 11:38:46</span>
+  <span class="_zonecode">40</span>
+  <span class="_summary">Summary of the event</span>
+  <span class="_description">Description of the event</span>
+  <span class="_location">Location of the event</span>
+  <span class="_organizer">Organizer</span>
+  <span class="_organizer_email">Organizer e-mail</span>
+  <span class="_all_day_event">false</span>
+  <span class="_date_format">DD/MM/YYYY</span>
+</a>
+
 
   <div class="actions-box">
     <ul class="actions-list">
       {{#each item in controller.actionsList.content}}
-        <li>{{item}}</li>
+        <li>
+          {{item}}
+
+{{!--           <div class="add-to-cal">add to cal</div>
+ --}}
+        </li>
       {{/each}}
     </ul>
   </div>
