--- a/app/assets/stylesheets/course/calendar.css.scss
+++ b/app/assets/stylesheets/course/calendar.css.scss
@@ -20,3 +20,12 @@
   margin: 0;
   padding: 0
 }
+
+
+.add-to-cal{
+  display: inline-block;
+  @include oli-text-smaller;
+  color: oli-blue(1);
+  cursor: pointer;
+  margin-left: 5px;
+}
