added external calendar integration

--- a/app/assets/javascripts/templates/activities/calendar.hbs
+++ b/app/assets/javascripts/templates/activities/calendar.hbs
@@ -24,31 +24,35 @@
     </button>
   </div>
   
-<a href="http://example.com/link-to-your-event" title="Add to Calendar" class="addthisevent">
-  Add to Calendar
-  <span class="_start">10-05-2012 11:38:46</span>
-  <span class="_end">11-05-2012 11:38:46</span>
-  <span class="_zonecode">40</span>
-  <span class="_summary">Summary of the event</span>
-  <span class="_description">Description of the event</span>
-  <span class="_location">Location of the event</span>
-  <span class="_organizer">Organizer</span>
-  <span class="_organizer_email">Organizer e-mail</span>
-  <span class="_all_day_event">false</span>
-  <span class="_date_format">DD/MM/YYYY</span>
-</a>
+
 
 
   <div class="actions-box">
     <ul class="actions-list">
       {{#each item in controller.actionsList.content}}
-        <li>
-          {{item}}
+        {{#view Oli.EventView}}
 
-{{!--           <div class="add-to-cal">add to cal</div>
- --}}
+        <li>
+          <div class="add-to-cal">
+            <a href="http://example.com/link-to-your-event" title="Add to Calendar" class="addthisevent">
+              {{item.date}} 
+              <span class="_start">10-05-2012</span>
+              <span class="_end">11-05-2012</span>
+              <span class="_zonecode">40</span>
+              <span class="_summary">{{item.description}}</span>
+              <span class="_description">Description of the event</span>
+              <span class="_all_day_event">false</span>
+              <span class="_date_format">DD/MM/YYYY</span>
+            </a>
+
+          </div>
+          - {{item.description}}
         </li>
+        {{/view}}
       {{/each}}
     </ul>
+  </div>
+  <div class="oli-text-smaller">
+    Click date to add to calendar
   </div>
 {{/view}}
