--- a/app/assets/stylesheets/course/calendar.css.scss
+++ b/app/assets/stylesheets/course/calendar.css.scss
@@ -29,3 +29,19 @@
   cursor: pointer;
   margin-left: 5px;
 }
+
+.addthisevent_dropdown{
+  top: 280px !important;
+  left: 150px !important;
+}
+
+.datepicker{
+  z-index: 1000 !important;
+}
+
+.actions-box a{
+  color: oli-blue(1);
+}
+
+
+
