--- a/app/assets/javascripts/templates/activities/calendar.hbs
+++ b/app/assets/javascripts/templates/activities/calendar.hbs
@@ -36,8 +36,8 @@
           <div class="add-to-cal">
             <a href="http://example.com/link-to-your-event" title="Add to Calendar" class="addthisevent">
               {{item.date}} 
-              <span class="_start">10-05-2012</span>
-              <span class="_end">11-05-2012</span>
+              <span class="_start">{{unbound item.dateForExt}}</span>
+              <span class="_end">{{unbound item.dateForExt}}</span>
               <span class="_zonecode">40</span>
               <span class="_summary">{{item.description}}</span>
               <span class="_description">Description of the event</span>
