--- a/app/assets/stylesheets/oli-root.css.scss
+++ b/app/assets/stylesheets/oli-root.css.scss
@@ -106,10 +106,18 @@ $levels-height: 45px;
   padding-top: 5px;
   width: 50%;
   padding-bottom: 5px;
+  padding-left: 5px;
+  margin-left: 10px;
 }
 
 .oli-form-field{
   @include oli-form-field;
+}
+
+.oli-form-field-long{
+  @include oli-form-field;
+  width: 90%;
+
 }
 
 .component-title{
