--- a/app/assets/stylesheets/course/brainstorm.css.scss
+++ b/app/assets/stylesheets/course/brainstorm.css.scss
@@ -17,3 +17,8 @@
   height: 50px;
   text-align: center;
 }
+
+.brainstorm-threads-container{
+  text-align: center;
+  color: oli-blue(1) !important;
+}
