--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -1,9 +1,14 @@
 {{outlet nav}}
 <div class="outer-wrapper">
   {{outlet tip}}
-  <div class="course-wrapper">
+  <div class="base-wrapper">
+    {{outlet me}}
+
+    <div class="course-wrapper">
+    {{outlet freeVideo}}
     {{outlet levels}}
     {{outlet bar}}
     {{outlet activity}}
+    </div>
   </div>
 </div>
