--- a/app/assets/stylesheets/course/activity.css.scss
+++ b/app/assets/stylesheets/course/activity.css.scss
@@ -6,6 +6,11 @@
   position: relative;
 }
 
+.base-wrapper{
+  margin: 100px auto 0 auto;
+  width: 650px;
+}
+
 .course-wrapper{
   width: 550px;
   margin: 0 auto;
