--- a/app/assets/javascripts/templates/activities/video.hbs.erb
+++ b/app/assets/javascripts/templates/activities/video.hbs.erb
@@ -3,12 +3,8 @@
   <video id="MY_VIDEO_1" class="video-js vjs-default-skin vjs-big-play-centered" controls
    preload="auto" width="549" height="320" 
    data-setup="{}" >
- {{!--   <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' /> --}}
- {{!--  <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
- --}}
-    <source src="/videos/video_1.mp4" type="video/mp4">
+    <source {{bind-attr src=controller.videoSrc}} type="video/mp4">
 
-  {{!--  <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' /> --}}
    <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
   </video>
 </div>
