--- a/app/assets/javascripts/templates/bar.hbs
+++ b/app/assets/javascripts/templates/bar.hbs
@@ -7,9 +7,12 @@
   </div>
 
   <div class="thin-bar-wrapper" id="thin-bar">
-    {{#each item in controller.activities.content}}{{#view Oli.NotchView titleBinding="item"}}
-    <div class="notch"></div>
-    {{/view}}{{/each}}
-    {{#view Oli.TriangleView id="triangle"}}{{/view}}
+    {{#each item in controller.barContent}}{{#view Oli.NotchView titleBinding="item"}}
+      <div class="notch"></div>
+      {{/view}}{{else}}
+      {{#view Oli.NotchView titleBinding="item"}}
+      <div class="notch"></div>
+      {{/view}}{{/each}}
+      {{#view Oli.TriangleView id="triangle"}}{{/view}}
 
   </div> <!-- /.thin-bar-wrapper -->
