--- a/app/assets/javascripts/templates/nav.hbs
+++ b/app/assets/javascripts/templates/nav.hbs
@@ -13,8 +13,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse  navbar-text" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav ">
-        
-        {{partial 'navContents'}}
+        <li>{{#link-to 'home'}}Home{{/link-to}}</li>
+        {{outlet navContents}}
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
