fixed but with nav transitions

--- a/app/assets/javascripts/templates/me/account_bar.hbs
+++ b/app/assets/javascripts/templates/me/account_bar.hbs
@@ -11,7 +11,7 @@
       {{user.name}}
     </div>
     <div class="user-level-account">
-      Free user
+      {{user.accountType}}
     </div>
   </div>
 </div>
