added videos symlink

--- a/app/assets/javascripts/templates/nav.hbs
+++ b/app/assets/javascripts/templates/nav.hbs
@@ -22,7 +22,7 @@
           <ul class="nav navbar-nav ">
            {{!--  <li>{{#link-to 'users.logout'}}Log out{{/link-to}}</li> --}}
             <li>
-              {{#link-to 'free_video' 1}}Log out{{/link-to}}
+              {{#link-to 'users.logout'}}Log out{{/link-to}}
             </li>
           </ul>
         </div>
