--- a/app/assets/javascripts/templates/free_video.hbs
+++ b/app/assets/javascripts/templates/free_video.hbs
@@ -6,6 +6,6 @@
   {{partial 'activities/video'}}
   {{partial 'forwardButton'}}
   <div id="fb-comments" class="fb-free-video">
-    <div  class="fb-comments" data-href="http://example.com/comments" data-numposts="5" data-colorscheme="light"></div>
+    <div  class="fb-comments" data-href="http://getoli.com" data-numposts="5" data-colorscheme="light"></div>
   </div>
 {{/view}}
