--- a/app/assets/javascripts/templates/nav.hbs
+++ b/app/assets/javascripts/templates/nav.hbs
@@ -15,7 +15,7 @@
       <div class="nav-contents-container">
         <ul class="nav navbar-nav ">
           <li>
-            {{#link-to 'home'}}Home{{/link-to}}</li>
+            {{#link-to 'me' }}Home{{/link-to}}</li>
           {{outlet navContents}}
         </ul>
         <div class="nav-contents-container-secondary">
