--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -124,3 +124,57 @@ src: font-url('proxima_nova_scosf_extrabold.otf');
 }
 
 .icon-ok-1:before { content: '\e802'; } /* '' */
+
+@font-face {
+  font-family: 'angle-up';
+  src: font-url('angle-up.eot?69275509');
+  src: font-url('angle-up.eot?69275509#iefix') format('embedded-opentype'),
+       font-url('angle-up.woff?69275509') format('woff'),
+       font-url('angle-up.ttf?69275509') format('truetype'),
+       font-url('angle-up.svg?69275509#check') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'check';
+    src: url('../font/check.svg?69275509#check') format('svg');
+  }
+}
+*/
+ 
+ [class^="icon-angle-up"]:before, [class*=" icon-angle-up"]:before {
+  font-family: "angle-up";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+ 
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+ 
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+     
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+ 
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+ 
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+ 
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+ 
+.icon-angle-up:before { content: '\e800'; } /* '' */
