improved nav bar

--- a/app/assets/stylesheets/oli-root.css.scss
+++ b/app/assets/stylesheets/oli-root.css.scss
@@ -127,7 +127,7 @@ $levels-height: 45px;
   font-size: .85em;
 
   a{
-    color: rgba(0,0,0, .75) !important;
+    color: rgba(0,0,0, .75);
 
   }
 }
