--- a/app/assets/stylesheets/course/navbar.css.scss
+++ b/app/assets/stylesheets/course/navbar.css.scss
@@ -6,30 +6,64 @@
   float: none !important;
 }
 
-.nav-contents-container{
-  display: block;
-  width: 500px;
-  margin: 0 auto;
+.navbar-nav li{
+  padding-left: 10px;
 
+}
+
+
+.nav-contents-container{
+  text-align: left !important;
+  width: 700px;
+  margin: 0 auto;
+  @include black-bold-text;
+  a{
+    color: rgba(0,0,0, .75) !important;
+
+  }
 }
 
 .nav-contents-container-secondary{
   float: right;
+  font-size: .8em;
+}
+
+.arrow-active-navbar{
+  position: absolute;
+  margin-bottom: -20px;
+  width: 0; 
+  height: 0; 
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
   
+  border-bottom: 5px solid oli-orange(1);
 }
 
 .navbar-text{
   float: none;
 
-  @include black-bold-text;
   a{
     padding: 20px 5px 0 5px !important;
   }
 }
 
+.nav-contents-container .active{
+
+  
+  color: oli-orange(1) !important;
+  
+}
+
+
 .navbar .navbar-collapse {
   text-align: left !important;
   margin:0 auto;
+}
+
+.navbar-oli img{
+  margin-right: 50px;
+  width: 331*.25px;
+  height: 208*.25px;
 }
 
 .navbar-oli{
@@ -37,8 +71,7 @@
   float: none;
   min-height: $nav-bar-height;
   background: rgba(251, 245, 242, 1);
-  // background: image-url('oli-no-flame.png') no-repeat; 
-  background-size: 331*.25px 208*.25px;
+ 
 }
 
 .navbar-border{
