integrated new reg/sign in with devise

--- a/app/assets/javascripts/templates/activities/choose_word.hbs
+++ b/app/assets/javascripts/templates/activities/choose_word.hbs
@@ -12,7 +12,8 @@
 
       {{view Ember.Checkbox checked=this.selected type="checkbox" name=check id=this.id class="roundedOne"}}
       <label  {{bindAttr for="this.id"}} ></label>
-    </div><div class="select-word"> {{this.word}}</div>
+    </div><div class="select-word"> {{this.word}}
+  </div>
  </div>
 
   {{/each }}
