--- a/app/assets/javascripts/templates/nav.hbs.erb
+++ b/app/assets/javascripts/templates/nav.hbs.erb
@@ -17,8 +17,8 @@
     <div class="collapse navbar-collapse  navbar-text" id="bs-example-navbar-collapse-1">
       <div class="nav-contents-container">
         <ul class="nav navbar-nav ">
-          <li>
-            <%= image_tag('oli-logo.png') %>
+          <li class="image-link-nav">
+            <a href="/" > <%= image_tag('oli-logo.png') %></a>
 
           </li>
           <li>
