--- a/app/assets/stylesheets/course/navbar.css.scss
+++ b/app/assets/stylesheets/course/navbar.css.scss
@@ -14,7 +14,7 @@
 
 .nav-contents-container{
   text-align: left !important;
-  width: 700px;
+  width: 740px;
   margin: 0 auto;
   @include black-bold-text;
   a{
@@ -44,6 +44,16 @@
 
   a{
     padding: 20px 5px 0 5px !important;
+  }
+}
+
+.image-link-nav {
+  padding: none !important;
+  margin: none !important;
+  height: 208*.25px;
+
+  a{
+    display: inline !important;
   }
 }
 
