--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,22 +1,13 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+ <%= render :partial => '/shared/oli_landing', :locals => {
 
+  :heading => 'NEW ONLINE COURSE NOW IN BETA', 
+  :subtext => ' Discover and share what you 
+    truly want and what you have to offer
+      to build a career and life you love.',
+  :footer => 'Sign up now to beta test the OLI course!',
+  :landing_form_partial => 'landing_form',
+  :button_text => "Submit"
 
-   <div><%= f.label :name %><br />
-  <%= f.text_field :name, autofocus: true %></div>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+} %>
+  <%= render 'modal' %>
