--- a/app/views/oli/landing.html.erb
+++ b/app/views/oli/landing.html.erb
@@ -1,42 +1,13 @@
 
-  <div class="wrapper-oli">
-    <div class="logo-wrapper">
-      <div class="logo-oli"><%= image_tag "oli-no-flame.png" %></div>
-      <div class="logo-flame"><%= image_tag "flame.png" %></div>
+ <%= render :partial => '/shared/oli_landing', :locals => {
 
-    </div>
-
-  <div class="header-text-oli">
-    NEW ONLINE COURSE COMING SOON
-  </div>
-
-  <div class="info-oli">
-    <div class="body-text-oli text-content-oli">
-      Discover and share what you 
+  :heading => 'NEW ONLINE COURSE NOW IN BETA', 
+  :subtext => ' Discover and share what you 
     truly want and what you have to offer
-      to build a career and life you love.
-    </div>
-    <div class="footer-text-oli text-content-oli">
-      Be the first to know when OLI launches.
-    </div>
-    <div class="oli-form">
-      <%= form_tag("/landing", method: "post", id: "oli-form") do %>
-      <%= text_field_tag(:name, nil, :placeholder => "Name", :class => "submit-field-name-oli") %>
-      <%= text_field_tag(:email, nil, :type => "email", :placeholder => "Email", :class => "submit-field-oli") %>
-        <button class="ladda-button submit-button-oli" data-style="zoom-out"><span class="ladda-label">SUBMIT</span></button>
-        <div class="status-oli"> <%= flash.now[:notice] %></div>
-        
+      to build a career and life you love.',
+  :footer => 'Sign up now to beta test the OLI course!',
+  :landing_form_partial => 'landing_form',
+  :button_text => "Submit"
 
-      <% end %>
-
-    </div> <!-- /oli-form -->
-  </div> <!-- /info -->
-
-    <div class="push-oli"></div>
-</div>
-
-<div class="footer-oli">
-  <div class="flames"></div>
-
-</div>
+} %>
   <%= render 'modal' %>
