integrated new reg/sign in with devise

--- a/app/assets/javascripts/templates/me/free_videos.hbs
+++ b/app/assets/javascripts/templates/me/free_videos.hbs
@@ -29,4 +29,8 @@
   </div>
 {{/each}}
 
+  <button class="smaller-button" data-style="zoom-out" {{action "buttonClicked" this on="click"}}>
+    Buy Course
+  </button>
+ 
 
