--- a/app/views/oli/_landing_form.html.erb
+++ b/app/views/oli/_landing_form.html.erb
@@ -1,4 +1,4 @@
-<div class="oli-form">
+<div class="oli-form oli-form-register">
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
