--- a/app/assets/javascripts/templates/me/gratack_input.hbs
+++ b/app/assets/javascripts/templates/me/gratack_input.hbs
@@ -1,7 +1,9 @@
- <div class="oli-text-small center">
-  {{controller.subtext}}
-</div>
+ {{#view Oli.GratackInputView}}
+   <div class="oli-text-small center">
+    {{controller.subtext}}
+  </div>
 
-<div class="input-container-acknowlegement">
-  {{input class="oli-form-field-long" placeholder=controller.placeholder value=input}}
-</div>
+  <div class="input-container-acknowlegement">
+    {{input class="oli-form-field-long" placeholder=controller.placeholder value=input}}
+  </div>
+{{/view}}
