added videos and new peak experience activities

--- a/app/assets/javascripts/templates/activities/brainstorm.hbs
+++ b/app/assets/javascripts/templates/activities/brainstorm.hbs
@@ -41,5 +41,5 @@
   </div>{{!-- </task-list-container>  --}}
 
   <div class="add-task-box" {{action "addTask" this on="click"}}>
-    Add Task
+    ADD TASK
   </div>
