--- a/app/assets/javascripts/templates/activities/video.hbs
+++ b/app/assets/javascripts/templates/activities/video.hbs
@@ -1,4 +1,4 @@
-{{#view Oli.VideoView}}
+{{#view Oli.VideoView source=controller.source}}
   {{video-player width=controller.width 
   height=controller.height
   source=controller.source
@@ -7,3 +7,21 @@
     {{{controller.transcript.content.content}}}
   </div>
 {{/view}}
+
+<div class="modal fade" id="videoErrorModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-oli">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title modal-title-oli" id="myModalLabel">Sorry!</h4>
+      </div>
+      <div class="modal-body">
+        <p>This content is missing.</p>
+        <p> We'll fix it as soon as possible!</p>
+              </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
