--- a/app/assets/stylesheets/course/word-thread.css.scss
+++ b/app/assets/stylesheets/course/word-thread.css.scss
@@ -7,6 +7,8 @@
 }
 
 .word-pill{
+  // -webkit-font-smoothing: subpixel-antialiased !important;
+
   cursor: pointer;
   background-color: oli-blue(1);
   margin: 2px;
@@ -15,7 +17,8 @@
   padding: 0px 5px 0px 5px;
   font-family: pn-thin;
   border-radius: 50px;
-  line-height: 1.8em;
+  line-height: 1.8em;  
+  font-weight: thin;
 
 }
 
