--- a/app/assets/stylesheets/oli-root.css.scss
+++ b/app/assets/stylesheets/oli-root.css.scss
@@ -5,6 +5,7 @@
 $nav-bar-height: 60px;
 $levels-height: 45px;
 
+
 @function oli-yellow($a){
   @return rgba(248, 160, 32, $a); 
 }
@@ -29,22 +30,6 @@ $levels-height: 45px;
   @return rgba(180, 180, 179, $a); 
 }
 
-.oli-yellow{
-  background: oli-yellow(1);
-}
-
-.oli-orange{
-  background: oli-orange(1);
-}
-
-.oli-red{
-  background: oli-red(1);
-}
-
-
-.oli-blue{
-  background: oli-blue(1);
-}
 
 @mixin oli-circle($dem, $mult){
   background: #fbf5f2 image-url("tip-logo-big.png") center no-repeat;
@@ -108,7 +93,6 @@ $levels-height: 45px;
   background-color: oli-blue(1);
   color: white;
   font-family: pn-thin;
-  font-smoothing: antialiased;
   box-shadow: 0 1px 3px rgba(38, 109, 191, .3); 
 
   font-size: .9em;
@@ -120,10 +104,11 @@ $levels-height: 45px;
 }
 
 @mixin black-bold-text{
+  -webkit-text-stroke: 0px!important;
+  -webkit-font-smoothing: antialiased !important;
   color: rgba(0,0,0, 1);
   font-family: pn-bold;
   text-align: center;
-  font-smoothing: antialiased;
   font-size: .85em;
 
   a{
@@ -144,110 +129,5 @@ $levels-height: 45px;
   padding-bottom: 5px;
   padding-left: 5px;
   margin-left: 10px;
-}
-
-.oli-form-field{
-  @include oli-form-field;
-}
-
-
-.oli-form-field-long{
-  @include oli-form-field;
-  width: 90%;
-
-}
-
-.component-title{
-  @include oli-bold;
-  font-size: 1.15em;
-}
-
-.oli-box{
-  @include oli-box;
-}
-
-.oli-scrollable{
-  @include scrollable-box;
-}
-
-.oli-box-large{
-  @include oli-box;
-  height: 100px;
-}
-
-.oli-inactive{
-  background-color: oli-dark-gray(1);
-  box-shadow: 0 1px 3px oli-dark-gray(.3); 
-
-}
-
-.oli-selector{
-  width: 90%;
-  @include oli-border;
-}
-
-.oli-selector-large{
-  width: 100%;
-  @include oli-border;
-}
-
-.oli-semibold{
-  font-family: pn-semibold;
-  font-size: .85em;
-  color: rgba(0,0,0,.9) !important;
-}
-
-.oli-bold{
-  @include oli-bold;
-}
-
-.oli-text{
-  @include oli-text;
-}
-
-.oli-text-smaller{
-  @include oli-text-smaller;
-}
-
-.oli-text-small{
-  @include oli-text-smaller;
-  font-size: .80em;
-}
-
-.no-margin{
-  margin: 0;
-}
-
-.full-width{
-  width: 100%;
-}
-
-.margin-top{
-  margin-top: 5px;
-}
-
-.margin-left{
-  margin-top: 10px;
-}
-
-.padding-top{
-  padding-top: 15px;
-}
-
-.center{
-  text-align: center;
-  margin: auto;
-}
-
-.display-none{
-  display: none;
-}
-
-.oli-container{
-  margin: 10px;
-}
-
-.oli-container-small{
-  margin: 2px;
 }
 
